@@ -1,5 +1,6 @@
 V.Next
 ---------
+- [PATCH] Return status code in errorResponse when server response is not in expected Json format. (#2321)
 - [PATCH] Handle repeated camera requests. (#2332)
 - [MINOR] Clear active broker cache if the (cached) active broker app doesn't support ipc mechanism (#2331)
 - [MINOR] Add support for CIAM custom domain (#2314)
